--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.19",
     "expo": "~53.0.12",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-mail-composer": "~14.1.4",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-gesture-handler": "~2.24.0"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
