--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.19",
     "expo": "~53.0.12",
+    "expo-clipboard": "^7.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-mail-composer": "~14.1.4",
@@ -24,6 +25,7 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
